# pymousetracker

./: LICENSE.txt  README.md  pyproject.toml
pymousetracker/: __init__.py  pymousetracker.py  test_pymousetracker.py
test/: test_pymousetracker.py
