[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymousetracker"
version = "1.0.0"
description = "A simple mouse tracking, color picking, and macro generation utility."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name="hlee100", email="henrylee1606@gmail.com" }
]
dependencies = [
  "pyautogui",
  "keyboard",
]

# --- ADD THIS SECTION BELOW ---
[project.scripts]
cursor-toolbox = "pymousetracker:main"

[project.urls]
Homepage = "https://github.com/hlee100/PyMouPosTracker"